.. Author notes: this file is formatted with restructured text
  (http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
  as it is included in Scrooge's user's guide.

Unreleased
----------
 - scrooge-core: Trait `c.t.scrooge.ThriftService` is now `c.t.finagle.thrift.ThriftServiceMarker`.
   Scrooge generated service objects now all inherit from `c.t.finagle.thrift.ThriftService`. Also,
   the `AsClosableMethodName` string was formerly part of `c.t.finagle.thrift.ThriftService`, but
   now is defined in the c.t.scrooge package object.
   ``PHAB_ID=D180341``

 - scrooge-generator: Thrift service objects now contain `unsafeBuildFromMethods`, which constructs
   a `ReqRepServicePerEndpoint` from a map of
   `ThriftMethod -> ThriftMethod.ReqRepServicePerEndpointServiceType`. It is unsafe because the
   types are not checked upon service construction, only when a request is attempted.
   ``PHAB_ID=D180341``

18.7.0
-------

- scrooge-adaptive: Turn the scrooge-adaptive back on as default in ScroogeRunner. `PHAB_ID=D187772``

18.6.0
-------

No Changes

18.5.0
-------
- scrooge-generator: Add support for construction_required fields in cocoa. ``PHAB_ID=D163127``
- scrooge-generator: Add cocoa initializer for each field in union. ``PHAB_ID=D156591``
- scrooge-generator: Add support for empty struct in cocoa. ``PHAB_ID=D156539``
- scrooge-generator: Fix setter bug for non-primitive type in cocoa. ``PHAB_ID=D156605``

- scrooge-adaptive: Turn the scrooge-adaptive off as default in ScroogeRunner due to
  incompatibility with sbt > 1.0.2. ``PHAB_ID=D163144``

18.4.0
-------
- scrooge-generator: Add support for construction_required fields. Add a validateNewInstance method
  to all generated scala companion objects. ``PHAB_ID=D148841``

- scrooge-core: Check for corruption in size meta field of container and throw
  an exception if size is found corrupted. ``PHAB_ID=D150057``
- scrooge: Upgrade libthrift to 0.10.0. ``PHAB_ID=D124620``


18.3.0
-------
